@@ -356,7 +356,7 @@ ext_list += check_fortran_extensions()
 NAME = "Assimulo"
 AUTHOR = "C. Andersson, C. Führer, J. Åkesson, M. Gäfvert"
 AUTHOR_EMAIL = "chria@maths.lth.se"
-VERSION = "2.1"
+VERSION = "2.1.1"
 LICENSE = "GPL"
 URL = "http://www.jmodelica.org/assimulo"
 DOWNLOAD_URL = "http://www.jmodelica.org/assimulo"
